Added Agent search by code
