# routes/api.php
@@ -25,7 +25,7 @@ Route::controller(AuthController::class)->group(function () {
     Route::post('/refresh', 'refresh');
 });
 
-Route::get('/agent/{agent_id}/{first_name}', [AgentController::class, 'getSearchAgent']);
+Route::get('/agent/search/{agent_id}/{first_name}', [AgentController::class, 'getSearchAgent']);
 
 Route::middleware('auth:sanctum')->group( function () {
     Route::post('/farmer/register', [FarmerProfileController::class, 'registerFarmer']);
